added some prelim css

--- a/index.html
+++ b/index.html
@@ -9,103 +9,103 @@
 </head>
 
 <body>
-    <h1>Happy Valley Shelter</h1>
-    <h3>Adopt a Dog</h3>
+    <h1 class="header">Happy Valley Shelter</h1>
+    <h3 class="CTA">Adopt a Dog</h3>
     <!--insert a link below for the form at the end of the sentence-->
-    <p>If you are interested in adopting one of our animals, pease fill out our online adoption form</p>
+    <p class= "CTA">If you are interested in adopting one of our animals, pease fill out our online adoption form</p>
     
     <section>
-        <img src= starter_files/images/beans.jpg>
+        <img src= starter_files/images/beans.jpg class="container">
         <figcaption>Beans</figcaption>
         <!--p tags below should share a class for pill navs-->
-        <p>Adult</p>
-        <p>Male</p>
-        <p>Medium</p>
-        <p>Easygoing</p>
-        <p>Good with cats</p>
+        <p class= "pill">Adult</p>
+        <p class= "pill">Male</p>
+        <p class= "pill">Medium</p>
+        <p class= "pill">Easygoing</p>
+        <p class= "pill">Good with cats</p>
 
-        <img src= starter_files/images/boston-terrier.jpg>
+        <img src= starter_files/images/boston-terrier.jpg class="container">
         <figcaption>Zelda</figcaption>
         <!--p tags below should share a class for pill navs-->
-        <p>Senior</p>
-        <p>Female</p>
-        <p>Small</p>
-        <p>Easygoing</p>
-        <p>Good with kids</p>
-        <p>Good with other dogs</p>
+        <p class= "pill">Senior</p>
+        <p class= "pill">Female</p>
+        <p class= "pill">Small</p>
+        <p class= "pill">Easygoing</p>
+        <p class= "pill">Good with kids</p>
+        <p class= "pill">Good with other dogs</p>
 
-        <img src= starter_files/images/boxer.jpg>
+        <img src= starter_files/images/boxer.jpg class="container">
         <figcaption>Baby</figcaption>
         <!--p tags below should share a class for pill navs-->
-        <p>Young</p>
-        <p>Female</p>
-        <p>Large</p>
-        <p>Energetic</p>
-        <p>Good with kids</p>
-        <p>Good with other dogs</p>
+        <p class= "pill">Young</p>
+        <p class= "pill">Female</p>
+        <p class= "pill">Large</p>
+        <p class= "pill">Energetic</p>
+        <p class= "pill">Good with kids</p>
+        <p class= "pill">Good with other dogs</p>
 
-        <img src= starter_files/images/golden-lab.jpg>
+        <img src= starter_files/images/golden-lab.jpg class="container">
         <figcaption>Tom-Tom</figcaption>
         <!--p tags below should share a class for pill navs-->
-        <p>Young</p>
-        <p>Male</p>
-        <p>Large</p>
-        <p>Energetic</p>
-        <p>Good with kids</p>
-        <p>Good with other dogs</p>
-        <p>Good with cats</p>
+        <p class= "pill">Young</p>
+        <p class= "pill">Male</p>
+        <p class= "pill">Large</p>
+        <p class= "pill">Energetic</p>
+        <p class= "pill">Good with kids</p>
+        <p class= "pill">Good with other dogs</p>
+        <p class= "pill">Good with cats</p>
 
-        <img src= starter_files/images/little-dog.jpg>
+        <img src= starter_files/images/little-dog.jpg class="container">
         <figcaption>Marco</figcaption>
         <!--p tags below should share a class for pill navs-->
-        <p>Adult</p>
-        <p>Male</p>
-        <p>Small</p>
-        <p>Energetic</p>
+        <p class= "pill">Adult</p>
+        <p class= "pill">Male</p>
+        <p class= "pill">Small</p>
+        <p class= "pill">Energetic</p>
 
-        <img src= starter_files/images/old-shaggy.jpg>
+        <img src= starter_files/images/old-shaggy.jpg class="container">
         <figcaption>Shackleton</figcaption>
         <!--p tags below should share a class for pill navs-->
-        <p>Adult</p>
-        <p>Male</p>
-        <p>Medium</p>
-        <p>Easygoing</p>
-        <p>Energetic</p>
-        <p>Good with kids</p>
-        <p>Good with other dogs</p>
-        <p>Good with cats</p>
+        <p class= "pill">Adult</p>
+        <p class= "pill">Male</p>
+        <p class= "pill">Medium</p>
+        <p class= "pill">Easygoing</p>
+        <p class= "pill">Energetic</p>
+        <p class= "pill">Good with kids</p>
+        <p class= "pill">Good with other dogs</p>
+        <p class= "pill">Good with cats</p>
 
-        <img src= starter_files/images/shih-tzu.jpg>
+        <img src= starter_files/images/shih-tzu.jpg class="container">
         <figcaption>Midge</figcaption>
         <!--p tags below should share a class for pill navs-->
-        <p>Adult</p>
-        <p>Female</p>
-        <p>Small</p>
-        <p>Easygoing</p>
-        <p>Good with kids</p>
+        <p class= "pill">Adult</p>
+        <p class= "pill">Female</p>
+        <p class= "pill">Small</p>
+        <p class= "pill">Easygoing</p>
+        <p class= "pill">Good with kids</p>
 
-        <img src= starter_files/images/young-bulldog.jpg>
+        <img src= starter_files/images/young-bulldog.jpg class="container">
         <figcaption>Ladybird</figcaption>
         <!--p tags below should share a class for pill navs-->
-        <p>Young</p>
-        <p>Female</p>
-        <p>Large</p>
-        <p>Easygoing</p>
-        <p>Energetic</p>
-        <p>Good with kids</p>
-        <p>Good with other dogs</p>
-        <p>Good with cats</p>
+        <p class= "pill">Young</p>
+        <p class= "pill">Female</p>
+        <p class= "pill">Large</p>
+        <p class= "pill">Easygoing</p>
+        <p class= "pill">Energetic</p>
+        <p class= "pill">Good with kids</p>
+        <p class= "pill">Good with other dogs</p>
+        <p class= "pill">Good with cats</p>
 
-        <img src= starter_files/images/young-peppy.jpg>
+        <img src= starter_files/images/young-peppy.jpg class="container">
         <figcaption>Mina</figcaption>
         <!--p tags below should share a class for pill navs-->
-        <p>Puppy</p>
-        <p>Female</p>
-        <p>Medium</p>
-        <p>Energetic</p>
-        <p>Good with kids</p>
-        <p>Good with other dogs</p>
-        <p>Good with cats</p>
+        <p class= "pill">Puppy</p>
+        <p class= "pill">Female</p>
+        <p class= "pill">Medium</p>
+        <p class= "pill">Energetic</p>
+        <p class= "pill">Good with kids</p>
+        <p class= "pill">Good with other dogs</p>
+        <p class= "pill">Good with cats</p>
     </section>
 
     <footer>
@@ -114,7 +114,7 @@
         <figcaption>Donate</figcaption>
         <img src= starter_files/images/volunteer.jpg>
         <figcaption>Volunteer</figcaption>
-        <img src= starter_files/images/our-location.jpg>
+        <img src= starter_files/images/location.png>
         <figcaption>Our location</figcaption>
 
     </footer>
