a little more css, stopping for tonight -- stuck at configuring gallery into columns

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <head>
     <meta charset="utf-8">
     <title>Adopt One Today!</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Oswald:400,700">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -12,7 +13,7 @@
     <h1 class="header">Happy Valley Shelter</h1>
     <h3 class="CTA">Adopt a Dog</h3>
     <!--insert a link below for the form at the end of the sentence-->
-    <p class= "CTA">If you are interested in adopting one of our animals, pease fill out our online adoption form</p>
+    <p class= "CTA">If you are interested in adopting one of our animals, please fill out our online adoption form</p>
     
     <section>
         <img src= starter_files/images/beans.jpg class="container">
@@ -23,7 +24,7 @@
         <p class= "pill">Medium</p>
         <p class= "pill">Easygoing</p>
         <p class= "pill">Good with cats</p>
-
+        
         <img src= starter_files/images/boston-terrier.jpg class="container">
         <figcaption>Zelda</figcaption>
         <!--p tags below should share a class for pill navs-->
