minor css changes, still stumped on nesting containers for 3x3 image grid

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <!--insert a link below for the form at the end of the sentence-->
     <p class= "CTA">If you are interested in adopting one of our animals, please fill out our online adoption form</p>
     
-    <section>
-        <img src= starter_files/images/beans.jpg class="container">
+    <section class ="container">
+        <img src= starter_files/images/beans.jpg class="containerImages">
         <figcaption>Beans</figcaption>
         <!--p tags below should share a class for pill navs-->
         <p class= "pill">Adult</p>
@@ -25,7 +25,7 @@
         <p class= "pill">Easygoing</p>
         <p class= "pill">Good with cats</p>
         
-        <img src= starter_files/images/boston-terrier.jpg class="container">
+        <img src= starter_files/images/boston-terrier.jpg class="containerImages">
         <figcaption>Zelda</figcaption>
         <!--p tags below should share a class for pill navs-->
         <p class= "pill">Senior</p>
@@ -35,7 +35,7 @@
         <p class= "pill">Good with kids</p>
         <p class= "pill">Good with other dogs</p>
 
-        <img src= starter_files/images/boxer.jpg class="container">
+        <img src= starter_files/images/boxer.jpg class="containerImages">
         <figcaption>Baby</figcaption>
         <!--p tags below should share a class for pill navs-->
         <p class= "pill">Young</p>
@@ -45,7 +45,10 @@
         <p class= "pill">Good with kids</p>
         <p class= "pill">Good with other dogs</p>
 
-        <img src= starter_files/images/golden-lab.jpg class="container">
+ 
+ 
+
+        <img src= starter_files/images/golden-lab.jpg class="containerImages">
         <figcaption>Tom-Tom</figcaption>
         <!--p tags below should share a class for pill navs-->
         <p class= "pill">Young</p>
@@ -56,7 +59,7 @@
         <p class= "pill">Good with other dogs</p>
         <p class= "pill">Good with cats</p>
 
-        <img src= starter_files/images/little-dog.jpg class="container">
+        <img src= starter_files/images/little-dog.jpg class="containerImages">
         <figcaption>Marco</figcaption>
         <!--p tags below should share a class for pill navs-->
         <p class= "pill">Adult</p>
@@ -64,7 +67,7 @@
         <p class= "pill">Small</p>
         <p class= "pill">Energetic</p>
 
-        <img src= starter_files/images/old-shaggy.jpg class="container">
+        <img src= starter_files/images/old-shaggy.jpg class="containerImages">
         <figcaption>Shackleton</figcaption>
         <!--p tags below should share a class for pill navs-->
         <p class= "pill">Adult</p>
@@ -76,7 +79,7 @@
         <p class= "pill">Good with other dogs</p>
         <p class= "pill">Good with cats</p>
 
-        <img src= starter_files/images/shih-tzu.jpg class="container">
+        <img src= starter_files/images/shih-tzu.jpg class="containerImages">
         <figcaption>Midge</figcaption>
         <!--p tags below should share a class for pill navs-->
         <p class= "pill">Adult</p>
@@ -85,7 +88,7 @@
         <p class= "pill">Easygoing</p>
         <p class= "pill">Good with kids</p>
 
-        <img src= starter_files/images/young-bulldog.jpg class="container">
+        <img src= starter_files/images/young-bulldog.jpg class="containerImages">
         <figcaption>Ladybird</figcaption>
         <!--p tags below should share a class for pill navs-->
         <p class= "pill">Young</p>
@@ -97,7 +100,7 @@
         <p class= "pill">Good with other dogs</p>
         <p class= "pill">Good with cats</p>
 
-        <img src= starter_files/images/young-peppy.jpg class="container">
+        <img src= starter_files/images/young-peppy.jpg class="containerImages">
         <figcaption>Mina</figcaption>
         <!--p tags below should share a class for pill navs-->
         <p class= "pill">Puppy</p>
@@ -109,14 +112,14 @@
         <p class= "pill">Good with cats</p>
     </section>
 
-    <footer>
+    <footer class="footContainer">
         <!--this section needs the proper html and css to have overlay caption-->
-        <img src= starter_files/images/donate.jpg>
-        <figcaption>Donate</figcaption>
-        <img src= starter_files/images/volunteer.jpg>
-        <figcaption>Volunteer</figcaption>
-        <img src= starter_files/images/location.png>
-        <figcaption>Our location</figcaption>
+        <img src= starter_files/images/donate.jpg class="footerImages">
+        <figcaption class="footerText">Donate</figcaption>
+        <img src= starter_files/images/volunteer.jpg class="footerImages">
+        <figcaption class="footerText">Volunteer</figcaption>
+        <img src= starter_files/images/location.png class="footerImages">
+        <figcaption class="footerText">Our location</figcaption>
 
     </footer>
 
