added the only thing not stumped on, the anchor link lol

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <h1 class="header">Happy Valley Shelter</h1>
     <h3 class="CTA">Adopt a Dog</h3>
     <!--insert a link below for the form at the end of the sentence-->
-    <p class= "CTA">If you are interested in adopting one of our animals, please fill out our online adoption form</p>
+    <p class= "CTA">If you are interested in adopting one of our animals, please fill out our <a href=#>online adoption form.</a></p>
+    
     
     <section class ="container">
         <img src= starter_files/images/beans.jpg class="containerImages">
