final with exception of footer 1st image center align

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <section class ="flex-container">
         <div class="flex-item">
         <img src= starter_files/images/beans.jpg>
-        <figcaption>Beans</figcaption>
+        <h4>Beans</h4>
         <ul>
         <li>Adult</li>
         <li>Male</li>
@@ -30,7 +30,7 @@
 
         <div class="flex-item">
         <img src= starter_files/images/boston-terrier.jpg>
-        <figcaption>Zelda</figcaption>
+        <h4>Zelda</h4>
         <ul>
         <li>Senior</li>
         <li>Female</li>
@@ -43,7 +43,7 @@
 
         <div class="flex-item">
         <img src= starter_files/images/boxer.jpg>
-        <figcaption>Baby</figcaption>
+        <h4>Baby</h4>
         <ul>
         <li>Young</li>
         <li>Female</li>
@@ -57,7 +57,7 @@
  
         <div class="flex-item">
         <img src= starter_files/images/golden-lab.jpg>
-        <figcaption>Tom-Tom</figcaption>
+        <h4>Tom-Tom</h4>
         <ul>
         <li>Young</li>
         <li>Male</li>
@@ -71,7 +71,7 @@
 
         <div class="flex-item">
         <img src= starter_files/images/little-dog.jpg>
-        <figcaption>Marco</figcaption>
+        <h4>Marco</h4>
         <ul>
         <li>Adult</li>
         <li>Male</li>
@@ -83,7 +83,7 @@
 
         <div class="flex-item">
         <img src= starter_files/images/old-shaggy.jpg>
-        <figcaption>Shackleton</figcaption>
+        <h4>Shackleton</h4>
         <ul>
         <li>Adult</li>
         <li>Male</li>
@@ -100,7 +100,7 @@
 
         <div class="flex-item">
         <img src= starter_files/images/shih-tzu.jpg>
-        <figcaption>Midge</figcaption>
+        <h4>Midge</h4>
         <ul>
         <li>Adult</li>
         <li>Female</li>
@@ -114,7 +114,7 @@
 
         <div class="flex-item">
         <img src= starter_files/images/young-bulldog.jpg>
-        <figcaption>Ladybird</figcaption>
+        <h4>Ladybird</h4>
         <ul>
         <li>Young</li>
         <li>Female</li>
@@ -131,7 +131,7 @@
 
         <div class="flex-item">
         <img src= starter_files/images/young-peppy.jpg>
-        <figcaption>Mina</figcaption>
+        <h4>Mina</h4>
         <ul>
         <li>Puppy</li>
         <li>Female</li>
@@ -142,10 +142,10 @@
         <li>Good with cats</li>
         </ul>
         </div>
-
     </section>
 
-    <footer class="flex-container">
+    <footer>
+    <div class="flex-container">
         <div class= "footer-flex-item" id="footer1">
             <h1>Donate</h1>
         </div>
@@ -157,6 +157,7 @@
         <div class= "footer-flex-item" id="footer3">
             <h1>Our Location</h1>
         </div>
+    </div>
     </footer>
 
 
